# libiosfunc

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  generate-changelog.sh  libiosfunc.pc.in
ios14.2-symbols/usr/lib/: ACIPCBTLib.dylib.nm  CarrierBundleUtilities.dylib.nm  PN548_API.dylib.nm  PN548_HAL.dylib.nm  libABMCommandDriversEUR.dylib.nm  libABMCommandDriversICE.dylib.nm  libAHTRestore.dylib.nm  libARI.dylib.nm  libARIServer.dylib.nm  libATCommandStudioDynamic.dylib.nm  libAWDProtobufBluetooth.dylib.nm  libAWDProtobufFacetime.dylib.nm  libAWDProtobufGCK.dylib.nm  libAWDProtobufLocation.dylib.nm  libAWDSupport.dylib.nm  libAWDSupportFramework.dylib.nm  libAXSpeechManager.dylib.nm  libAccessibility.dylib.nm  libAppleEXR.dylib.nm  libAudioToolboxUtility.dylib.nm  libBBUpdaterDynamic.dylib.nm  libBBUpdaterDynamic_stubs.dylib.nm  libBKDM2.dylib.nm  libBasebandDiagnostic.dylib.nm  libBasebandManager.dylib.nm  libBasebandManagerICE.dylib.nm  libDHCPServer.A.dylib.nm  libETLDIAGLoggingDynamic.dylib.nm  libETLDLFDynamic.dylib.nm  libETLDLOADCoreDumpDynamic.dylib.nm  libETLDLOADDynamic.dylib.nm  libETLDMCDynamic.dylib.nm  libETLDynamic.dylib.nm  libETLEFSDumpDynamic.dylib.nm  libETLSAHDynamic.dylib.nm  libFDR.dylib.nm  libFusionComponentCheck.dylib.nm  libH5Dynamic.dylib.nm  libHDLCDynamic.dylib.nm  libICEClient.dylib.nm  (+70 more)
ios14.2-symbols/usr/lib/system/: libcache.dylib.nm  libcompiler_rt.dylib.nm  libcopyfile.dylib.nm  libcorecrypto.dylib.nm  libcorecrypto_noasm.dylib.nm  libcorecrypto_trace.dylib.nm  libdispatch.dylib.nm  (+23 more)
macosx11.2.3-symbols/usr/lib/: AppleConvergedTransport.dylib.nm  PN548.dylib.nm  PN548_API.dylib.nm  PN548_HAL.dylib.nm  libATCommandStudioDynamic.dylib.nm  libAccessibility.dylib.nm  libAccountPolicyTranslation.dylib.nm  libAppleArchive.dylib.nm  libAppletTranslationLibrary.dylib.nm  libAudioIssueDetector.dylib.nm  libAudioStatistics.dylib.nm  libAudioToolboxUtility.dylib.nm  libBSDPClient.A.dylib.nm  libCRFSuite.dylib.nm  libCTGreenTeaLogger.dylib.nm  libCheckFix.dylib.nm  libChineseTokenizer.dylib.nm  libCoreStorage.dylib.nm  libDHCPServer.A.dylib.nm  libDiagnosticMessagesClient.dylib.nm  libEndpointSecurity.dylib.nm  libFDRDecode.dylib.nm  libFosl_dynamic.dylib.nm  libIASAuthReboot.dylib.nm  libIASUnifiedProgress.dylib.nm  libIOAccessoryManager.dylib.nm  libIOGTrace.dylib.nm  libIOReport.dylib.nm  libKernelCollectionBuilder.dylib.nm  libMemoryResourceException.dylib.nm  libMobileGestalt.dylib.nm  libParallelCompression.dylib.nm  libQMIParserDynamic.dylib.nm  libReverseProxyDevice.dylib.nm  libRosetta.dylib.nm  libScreenReader.dylib.nm  libSecRecord.dylib.nm  libSystem.B.dylib.nm  libTelephonyUtilDynamic.dylib.nm  libThaiTokenizer.dylib.nm  (+81 more)
missing_symbols/: usr_lib_system_libcompiler_rt.dylib  usr_lib_system_libcopyfile.dylib  usr_lib_system_libcorecrypto.dylib  usr_lib_system_libdispatch.dylib  usr_lib_system_libsystem_asl.dylib  usr_lib_system_libsystem_c.dylib  usr_lib_system_libsystem_containermanager.dylib  usr_lib_system_libsystem_coreservices.dylib  usr_lib_system_libsystem_info.dylib  usr_lib_system_libsystem_platform.dylib  usr_lib_system_libsystem_sandbox.dylib  usr_lib_system_libsystem_trace.dylib  usr_lib_system_libxpc.dylib
missing_symbols/usr/lib/: PN548_API.dylib  PN548_HAL.dylib  libATCommandStudioDynamic.dylib  libAccessibility.dylib  libAudioToolboxUtility.dylib  libDHCPServer.A.dylib  libMemoryResourceException.dylib  libTelephonyUtilDynamic.dylib  libapp_launch_measurement.dylib  libcoreroutine.dylib  libicucore.A.dylib  libmorphun.dylib  libnetwork.dylib  libnetworkextension.dylib  libnfrestore.dylib  libnfshared.dylib  libobjc.A.dylib  libspindump.dylib  libsystemstats.dylib
src/: Makefile.am
src/include/: common.h  config.h.in  config.h.in~  libiosfunc.h
src/include/extra-headers/: rune.h  util.h  utmp.h  utmpx.h  wordexp.h
src/include/xnu_headers/: Block_private.h  libproc.h  utmpx-darwin.h  utmpx_thread.h  wordexp.h
src/libDHCPServer/: DHCPServer.c  DHCPServer.h  Makefile.am
src/libSystem/: Makefile.am
src/libSystem/libcompiler_rt/: Makefile.am  clear_cache.c  enable_execute_stack.c
src/libSystem/libkeymgr/: Makefile.am  keymgr.c
src/libSystem/libkxld/: Makefile.am  kxld_object.c  kxld_reloc.c  kxld_util.h
src/libSystem/libsystem_asl/: Makefile.am  asl.c  asl_fd.c  asl_ipc.h  asl_msg.c  asl_mt_shim.c  asl_util.c  syslog.c
src/libSystem/libsystem_c/: Makefile.am  ascii.c  atexit.c  cdefs.h  collate.c  collate.h  findfp.c  fix_grouping.c  fvwrite.c  getenv.c  ldpart.c  list  lmessages.c  lmonetary.c  lnumeric.c  local.h  localeconv.c  mbsnrtowcs.c  none.c  printf-pos.c  setenv.c  setlocale.c  setlocale.h  setrunelocale.c  table.c  timelocal.c  utmpx-darwin.c  utmpx.c  vfprintf.c  wcsnrtombs.c  wordexp.c  xlocale.c  xlocale_private.h  xprintf.c  xprintf_domain.c  xprintf_errno.c  xprintf_float.c  xprintf_hexdump.c  xprintf_int.c  xprintf_quote.c  (+3 more)
src/libSystem/libsystem_darwin/: Makefile.am  variant.c
src/libSystem/libsystem_info/: Makefile.am  stub.c
src/libSystem/libsystem_kernel/: Makefile.am  libproc.c  os_xbs_chrooted.c  quota_obsolete.c  stat.c  system-version-compat-support.c
src/libSystem/libsystem_platform/: Makefile.am  OSAtomic.c  OSAtomicDeprecated.h  _ctx_done.c  init.c
src/libSystem/libsystem_pthread/: Makefile.am  _pthread_mutex_enable_legacy_mode.c
src/libSystem/libsystem_secinit/: Makefile.am  libsecinit.c
src/libSystem/libsystem_trace/: Makefile.am  _os_trace_basesystem_storage_available.c
src/libSystem/libunc/: Makefile.am  stub.c
src/libicucore/: Makefile.am
src/libicucore/io/: Makefile.am  icu.nm
src/libobjc/: Makefile.am  NSObject.mm  Protocol.h  Protocol.mm  list  maptable.mm  objc-accessors.mm  objc-api.h  objc-block-trampolines.mm  objc-cache.mm  objc-class.mm  objc-config.h  objc-exception.mm  objc-gdb.h  objc-initialize.mm  objc-internal.h  objc-os.h  objc-os.mm  objc-runtime-new.mm  objc-runtime.mm  objc-sel.mm  objc-sync.mm  runtime.h
src/libobjc/asm/: Makefile.am  objc-msg-arm64.s
src/libobjc/objc/: NSObject.h
(+66 files in other folders)
