noinst_LTLIBRARIES = libkxld.la
libkxld_la_CPPFLAGS = \
	-I$(top_srcdir)/src/include \
	-I$(top_srcdir)/src/include/xnu_headers \
	-isystem EXTERNAL_HEADERS
libkxld_la_CFLAGS = -pedantic -dynamic -std=c99
libkxld_la_SOURCES = \
	kxld.c \
	kxld_array.c \
	kxld_array.h \
	kxld_copyright.c \
	kxld_demangle.c \
	kxld_demangle.h \
	kxld_dict.c \
	kxld_dict.h \
	kxld_kext.c \
	kxld_kext.h \
	kxld_object.c \
	kxld_object.h \
	kxld_reloc.c \
	kxld_reloc.h \
	kxld_sect.c \
	kxld_sect.h \
	kxld_seg.c \
	kxld_seg.h \
	kxld_splitinfolc.c \
	kxld_splitinfolc.h \
	kxld_srcversion.c \
	kxld_srcversion.h \
	kxld_sym.c \
	kxld_sym.h \
	kxld_symtab.c \
	kxld_symtab.h \
	kxld_util.c \
	kxld_util.h \
	kxld_uuid.c \
	kxld_uuid.h \
	kxld_versionmin.c \
	kxld_versionmin.h \
	kxld_vtable.c \
	kxld_vtable.h
