noinst_LTLIBRARIES = libsystem_asl.la
libsystem_asl_la_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/include/xnu_headers
libsystem_asl_la_SOURCES = \
	asl.c \
	asl_client.h \
	asl_core.h \
	asl_fd.c \
	asl_file.h \
	asl_ipc.h \
	asl_msg.c \
	asl_msg.h \
	asl_msg_list.h \
	asl_mt_shim.c \
	asl_object.h \
	asl_private.h \
	asl_store.h \
	asl_string.h \
	asl_util.c \
	syslog.c
