noinst_LTLIBRARIES = libsystem_c.la
libsystem_c_la_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/include/xnu_headers
libsystem_c_la_SOURCES = \
	arith.h \
	ascii.c \
	atexit.c \
	atexit.h \
	big5.c \
	cdefs.h \
	collate.c \
	collate.h \
	euc.c \
	findfp.c \
	fix_grouping.c \
	floatio.h \
	frune.c \
	fvwrite.c \
	fvwrite.h \
	gb18030.c \
	gb2312.c \
	gbk.c \
	gdtoa.h \
	getenv.c \
	glue.h \
	ldpart.c \
	ldpart.h \
	lmessages.c \
	lmessages.h \
	lmonetary.c \
	lmonetary.h \
	lnumeric.c \
	lnumeric.h \
	local.h \
	localeconv.c \
	login.c \
	logout.c \
	mblocal.h \
	mbrune.c \
	mbsnrtowcs.c \
	mskanji.c \
	namespace.h \
	none.c \
	printf-pos.c \
	printfcommon.h \
	printflocal.h \
	runedepreciated.c \
	runedepreciated.h \
	setenv.c \
	setinvalidrune.c \
	setlocale.c \
	setlocale.h \
	setrunelocale.c \
	table.c \
	timelocal.c \
	timelocal.h \
	utf2.c \
	utf8.c \
	utmpx-darwin.c \
	utmpx.c \
	vfprintf.c \
	wcsnrtombs.c \
	wordexp.c \
	xlocale.c \
	xlocale_private.h \
	xprintf.c \
	xprintf_domain.c \
	xprintf_domain.h \
	xprintf_errno.c \
	xprintf_float.c \
	xprintf_hexdump.c \
	xprintf_int.c \
	xprintf_private.h \
	xprintf_quote.c \
	xprintf_str.c \
	xprintf_time.c \
	xprintf_vis.c
