noinst_LTLIBRARIES = libsystem_kernel.la
libsystem_kernel_la_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/include/xnu_headers
libsystem_kernel_la_SOURCES = \
	libproc.c \
	libproc_internal.h \
	os_xbs_chrooted.c \
	quota_obsolete.c \
	stat.c \
	system-version-compat-support.c \
	system-version-compat-support.h
