noinst_LTLIBRARIES = libsystem_platform.la
libsystem_platform_la_CPPFLAGS = -I$(top_srcdir)/src/include -I$(top_srcdir)/src/include/xnu_headers
libsystem_platform_la_SOURCES = \
	OSAtomic.c \
	OSAtomic.h \
	OSAtomicDeprecated.h \
	OSAtomicFifo.h \
	OSAtomicQueue.h \
	OSSpinLockDeprecated.h \
	_ctx_done.c \
	compat.h \
	init.c
